--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,6 @@
   },
   "cacheDirectories": ["node_modules", "client/node_modules"],
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.4",
-    "babel-loader": "^6.2.4",
-    "babel-runtime": "^6.6.1",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
     "es5-shim": "^4.5.7",
     "expose-loader": "^0.7.1",
     "immutable": "^3.7.6",
@@ -32,9 +23,18 @@
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.0.1",
-    "webpack": "^1.12.14"
+    "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
+    "webpack": "^1.12.14",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
+    "babel-runtime": "^6.6.1",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0"
   }
 }
