--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "react-webpack-rails-tutorial",
+  "name": "govau-transitions-beta",
   "version": "0.0.1",
   "engines": {
     "node": "5.10.0",
     "npm": "3.5.0"
   },
   "scripts": {
-    "postinstall": "cd client && npm install",
+    "postinstall": "node config/ui-kit && cd client && npm install",
     "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
     "test": "rspec"
+  },
+  "devDependencies": {
+    "download-file": "^0.1.5"
   }
 }
