--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "npm": "3.5.0"
   },
   "scripts": {
-    "postinstall": "node config/ui-kit && cd client && npm install",
+    "postinstall": "node client/ui-kit && cd client && npm install",
     "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
     "test": "rspec"
   },
