--- a/client/package.json
+++ b/client/package.json
@@ -10,19 +10,33 @@
     "build:production": "NODE_ENV=production webpack --config webpack.config.js",
     "build:development": "webpack -w --config webpack.config.js"
   },
-  "cacheDirectories": ["node_modules", "client/node_modules"],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AusDTO/govau-transitions-beta.git"
+  },
+  "author": "transitions team",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/AusDTO/govau-transitions-beta/issues"
+  },
+  "homepage": "https://github.com/AusDTO/govau-transitions-beta#readme",
+  "cacheDirectories": [
+    "node_modules",
+    "client/node_modules"
+  ],
   "dependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
-    "babel-runtime": "^6.6.1",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.11.6",
     "es5-shim": "^4.5.7",
     "expose-loader": "^0.7.1",
+    "gov-au-ui-kit": "git+https://github.com/AusDTO/gov-au-ui-kit.git#1.7.5",
     "immutable": "^3.7.6",
     "imports-loader": "^0.6.5",
     "mirror-creator": "1.1.0",
@@ -33,8 +47,12 @@
     "redux": "^3.3.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.0.1",
-    "webpack": "^1.12.14"
+    "webpack": "^1.13.2"
   },
   "devDependencies": {
+    "css-loader": "^0.24.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.0"
   }
 }
