--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "react-webpack-rails-tutorial",
+  "name": "gov-au-transitions-beta",
   "version": "0.0.1",
   "engines": {
     "node": "5.10.0",
     "npm": "3.5.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AusDTO/govau-transitions-beta.git"
+  },
+  "author": "transitions team",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/AusDTO/govau-transitions-beta/issues"
+  },
+  "homepage": "https://github.com/AusDTO/govau-transitions-beta#readme",
   "scripts": {
     "postinstall": "cd client && npm install",
     "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
