--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,7 @@
     "babel-runtime": "^6.11.6",
     "es5-shim": "^4.5.7",
     "expose-loader": "^0.7.1",
-    "gov-au-ui-kit": "git+https://github.com/AusDTO/gov-au-ui-kit.git#1.7.5",
+    "gov-au-ui-kit": "git+https://github.com/nathf/gov-au-ui-kit.git#feature/node-install-issues",
     "immutable": "^3.7.6",
     "imports-loader": "^0.6.5",
     "mirror-creator": "1.1.0",
@@ -54,6 +54,7 @@
   "devDependencies": {
     "css-loader": "^0.24.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0"
   }
