--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
   "homepage": "https://github.com/AusDTO/govau-transitions-beta#readme",
   "scripts": {
     "postinstall": "cd client && npm install",
-    "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
-    "test": "rspec"
+    "rails-server": "foreman start -f Procfile.dev",
+    "test": "rspec",
+    "posttest": "cd client && npm test"
+  },
+  "devDependencies": {
+    "ava": "^0.16.0",
+    "enzyme": "^2.4.1",
+    "react": "^15.3.1",
+    "react-addons-test-utils": "^15.3.1",
+    "react-dom": "^15.3.1"
   }
 }
