--- a/circle.yml
+++ b/circle.yml
@@ -3,3 +3,9 @@ machine:
     version: 2.3.1
   node:
     version: 5.10.0
+
+test:
+  override:
+    - npm test
+    - bundle exec rspec spec --format progress
+    - RAILS_ENV="test" RACK_ENV="test" bundle exec spinach
