--- a/client/package.json
+++ b/client/package.json
@@ -43,8 +43,8 @@
     "immutable": "^3.7.6",
     "imports-loader": "^0.6.5",
     "mirror-creator": "1.1.0",
-    "react": "^0.14.8 || ^15.0.0",
-    "react-dom": "^0.14.8 || ^15.0.0",
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
     "react-on-rails": "6.0.5",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
@@ -54,13 +54,16 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
+    "ava": "^0.16.0",
     "babel-register": "^6.14.0",
     "css-loader": "^0.24.0",
+    "enzyme": "^2.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "jsdom": "^9.4.2",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.11.0",
+    "react-addons-test-utils": "^15.3.1",
     "sass-loader": "^4.0.0"
   },
   "ava": {
