--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "enzyme": "^2.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "imports-loader": "^0.6.5",
     "jsdom": "^9.4.2",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.11.0",
