--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,18 @@
     "client/node_modules"
   ],
   "dependencies": {
+    "es5-shim": "^4.5.7",
+    "gov-au-ui-kit": "git+https://github.com/nathf/gov-au-ui-kit.git#feature/node-install-issues",
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
+    "react-on-rails": "6.0.5",
+    "react-redux": "^4.4.1",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.4.0",
+    "ava": "^0.16.0",
     "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
@@ -36,34 +48,19 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.11.6",
-    "es5-shim": "^4.5.7",
-    "expose-loader": "^0.7.1",
-    "gov-au-ui-kit": "git+https://github.com/nathf/gov-au-ui-kit.git#feature/node-install-issues",
-    "immutable": "^3.7.6",
-    "imports-loader": "^0.6.5",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-on-rails": "6.0.5",
-    "react-redux": "^4.4.1",
-    "redux": "^3.3.1",
-    "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.0.1",
-    "webpack": "^1.13.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "ava": "^0.16.0",
     "babel-register": "^6.14.0",
+    "babel-runtime": "^6.11.6",
     "css-loader": "^0.24.0",
     "enzyme": "^2.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "imports-loader": "^0.6.5",
     "jsdom": "^9.4.2",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.11.0",
     "react-addons-test-utils": "^15.3.1",
-    "sass-loader": "^4.0.0"
+    "sass-loader": "^4.0.0",
+    "webpack": "^1.13.2"
   },
   "ava": {
     "babel": "inherit",
