--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
     "build:test": "webpack --config webpack.config.js",
     "build:production": "NODE_ENV=production webpack --config webpack.config.js",
     "build:development": "webpack -w --config webpack.config.js",
-    "test": "ava"
+    "test": "NODE_ENV=test ava",
+    "test:coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=html ava",
+    "test:check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100"
+
   },
   "repository": {
     "type": "git",
@@ -57,6 +60,7 @@
     "imports-loader": "^0.6.5",
     "jsdom": "^9.4.2",
     "node-sass": "^3.8.0",
+    "nyc": "^8.1.0",
     "postcss-loader": "^0.11.0",
     "react-addons-test-utils": "^15.3.1",
     "sass-loader": "^4.0.0",
