--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
@@ -52,6 +53,10 @@
     "babel-runtime": "^6.11.6",
     "css-loader": "^0.24.0",
     "enzyme": "^2.4.1",
+    "eslint": "^3.4.0",
+    "eslint-config-rackt": "^1.1.1",
+    "eslint-plugin-ava": "^3.0.0",
+    "eslint-plugin-react": "^6.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "imports-loader": "^0.6.5",
