--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
     "postcss-loader": "^0.11.0",
     "react-addons-test-utils": "^15.3.1",
     "sass-loader": "^4.0.0",
+    "sinon": "^1.17.5",
     "webpack": "^1.13.2"
   },
   "ava": {
