--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "test": "NODE_ENV=test ava",
     "test:coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=html ava",
     "test:check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "lint": "eslint app __tests__"
+    "lint": "eslint app __tests__",
+    "rails-server": "cd .. && foreman start -f Procfile.dev"
   },
   "repository": {
     "type": "git",
