--- a/client/package.json
+++ b/client/package.json
@@ -72,7 +72,8 @@
     "react-addons-test-utils": "^15.3.1",
     "sass-loader": "^4.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-closure-compiler": "^2.0.2"
   },
   "ava": {
     "babel": "inherit",
