--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -12,7 +12,8 @@
     "react/jsx-uses-vars": 1,
     "react/jsx-uses-react": 1,
     "react/jsx-no-undef": 2,
-    "react/jsx-wrap-multilines": 2
+    "react/jsx-wrap-multilines": 2,
+    "prefer-template": 1
   },
   "plugins": [
     "react",
