--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
     "enzyme": "^2.4.1",
     "eslint": "^3.4.0",
     "eslint-config-rackt": "^1.1.1",
+    "eslint-loader": "^1.5.0",
     "eslint-plugin-ava": "^3.0.0",
     "eslint-plugin-react": "^6.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
