--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "es5-shim": "^4.5.7",
     "font-awesome": "^4.6.3",
-    "gov-au-ui-kit": "git+https://github.com/nathf/gov-au-ui-kit.git#feature/node-install-issues",
+    "gov-au-ui-kit": "AusDTO/gov-au-ui-kit.git#1.8.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-on-rails": "6.0.5",
