--- a/circle.yml
+++ b/circle.yml
@@ -19,13 +19,10 @@ test:
 
 deployment:
   staging:
-    branch: feature/deployments
+    branch: master
     owner: AusDTO
     commands:
       - cf api https://api.system.staging.digital.gov.au
       - cf auth $CF_STAGING_USER $CF_STAGING_PASSWORD
       - cf target -o govau -s transitions
-      - curl https://api.rollbar.com/api/1/deploy/ -F access_token=$ROLLBAR_ACCESS_TOKEN
-          -F environment=production -F revision=`git log -n 1 --pretty=format:"%H"`
-          -F local_username=`whoami`
       - cf push $CIRCLE_PROJECT_REPONAME
