--- a/circle.yml
+++ b/circle.yml
@@ -4,9 +4,25 @@ machine:
   node:
     version: 5.10.0
 
+dependencies:
+  pre:
+    - curl -v -L -o cf-cli_amd64.deb 'https://cli.run.pivotal.io/stable?release=debian64&source=github'
+    - sudo dpkg -i cf-cli_amd64.deb
+    - cf -v
+
 test:
   override:
     - npm run build:production
     - npm test
     - bundle exec rspec spec --format progress
     - RAILS_ENV="test" RACK_ENV="test" bundle exec spinach
+
+deployment:
+  staging:
+    branch: master
+    owner: AusDTO
+    commands:
+      - cf api https://api.system.staging.digital.gov.au
+      - cf auth $CF_STAGING_USER $CF_STAGING_PASSWORD
+      - cf target -o govau -s transitions
+      - cf push $CIRCLE_PROJECT_REPONAME
