--- a/client/package.json
+++ b/client/package.json
@@ -72,6 +72,8 @@
     "nyc": "^8.1.0",
     "postcss-loader": "^0.11.0",
     "react-addons-test-utils": "^15.3.1",
+    "react-router": "^2.8.0",
+    "react-router-redux": "^4.0.5",
     "sass-loader": "^4.0.0",
     "sinon": "^1.17.5",
     "url-loader": "^0.5.7",
