--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
   ],
   "dependencies": {
     "es5-shim": "^4.5.7",
+    "es6-promise": "^3.3.0",
     "font-awesome": "^4.6.3",
     "gov-au-ui-kit": "AusDTO/gov-au-ui-kit.git#1.8.0",
     "react": "^15.0.0",
@@ -41,7 +42,8 @@
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
-    "webfontloader": "^1.6.26"
+    "webfontloader": "^1.6.26",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
